# conversion-factor-for-shape-index

./: .gitignore  pyproject.toml  readme.md
notebooks/: notebook.ipynb
src/: compute.py  config.py  plot.py  shape.py
